# yate

./: .clang-format  .clang-tidy  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp  renderer.cpp  renderer.hpp
cmake/: YateExtension.cmake
core/: CMakeLists.txt
core/include/yate_core/: editor.hpp
core/src/: editor.cpp
extensions/: all.hpp
sdk/: CMakeLists.txt
sdk/include/yate/: editor.hpp  extension.hpp
